# ChangeLog for dev-python/setuptools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.238 2014/08/01 11:31:47 armin76 Exp $

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> setuptools-2.2.ebuild:
  sparc stable wrt #508416

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> setuptools-2.2.ebuild:
  Stable on alpha, bug #508416

*setuptools-5.4.1 (11 Jul 2014)

  11 Jul 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.4.1.ebuild:
  Version bump.

  04 Jul 2014; Mike Gilbert <floppym@gentoo.org> setuptools-5.3.ebuild,
  setuptools-9999.ebuild:
  Depend on pytest.

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> setuptools-2.2.ebuild:
  ppc64 stable wrt bug #508416

*setuptools-5.3 (29 Jun 2014)

  29 Jun 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.3.ebuild:
  Version bump.

*setuptools-5.2 (24 Jun 2014)

  24 Jun 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.2.ebuild:
  Version bump.

*setuptools-5.1 (15 Jun 2014)

  15 Jun 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.1.ebuild:
  Version bump.

*setuptools-5.0.1 (15 Jun 2014)

  15 Jun 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.0.1.ebuild:
  Version bump.

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> setuptools-2.2.ebuild:
  ia64 stable wrt bug #508416

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> setuptools-2.2.ebuild:
  Stable for ppc, wrt bug #508416

  25 May 2014; Mikle Kolyada <zlogene@gentoo.org> setuptools-2.2.ebuild:
  x86 stable wrt bug #508416

  24 May 2014; Mikle Kolyada <zlogene@gentoo.org> setuptools-2.2.ebuild:
  amd64 stable wrt bug #508416

  27 Apr 2014; Markus Meier <maekke@gentoo.org> setuptools-2.2.ebuild:
  arm stable, bug #508416

  26 Apr 2014; Jeroen Roovers <jer@gentoo.org> setuptools-2.2.ebuild:
  Stable for HPPA (bug #508416).

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> setuptools-0.6.33.ebuild,