@@ -23,6 +23,7 @@ DIST setuptools-5.1.tar.gz 804805 SHA256 5855a13607cae9123df0981d814d32b5b413b7a
 DIST setuptools-5.2.tar.gz 807345 SHA256 603f5dc2207d9930370483ce04cd57a847e7816d541f93c87d60089457306205 SHA512 891613bd8cc3302fb520c02173fd06f708b722263524d29deb387ca495059ed40e313d133f77283105c910fee55988dcd0d449734087648ce18b7e4e0b7174c6 WHIRLPOOL afcda655ac5c07c192b0880472e18dfd4e3485144662ef309410fc1ddb07ed46c46d1e1a97d9ce6dcc67cc40538ab41100b87838d70927bd9490dd11258e83ff
 DIST setuptools-5.3.tar.gz 807634 SHA256 b2ef5d25b38a970b64f44f95df6a4e5e78e80b35da45d63ae01a452c3c00ed87 SHA512 d2db9c26bf2db97f36d53d0d873adadf0ecc370ec333c0b4aca37a9e95836eab854c9a7d3e1ab94210070179f0b1fb308af2e73d2dd680543a3f9c03cc4720b4 WHIRLPOOL 5aa9533fc2fb26033194220476cfb0a3bf159ebbfb770a43adec590c04f0dd02d731c98042191dbe02b40ad93434b341d9f561266b799df4548cf3e3541943b9
 DIST setuptools-5.4.1.tar.gz 782761 SHA256 41194dc283bd186d5a7825c16b89d88bee369a6c4c4c7494e84909933b6f63be SHA512 823a04a642a562b804ad03469efd54329ff93b5162e4c2bd052655301788f5d124b91202886770239765ac68b3729aae78449a83f89b514bca847fa87370a2bb WHIRLPOOL 894717430f532273c61dc969c912a80668f6767bbb3284c3c1ad4e3d98e21e8952ce43d59205b0878bc94bc4fef42b8bc19d673b802ee235108965d6b9a44f36
+DIST setuptools-5.6.tar.gz 1018097 SHA256 3f9799f4e42f8073aa4c63c24c87ac9b9a0df552c7b38f0ed755176089441537 SHA512 238045da484f32131416bdfc8b6f268b1e1156a5d055f69584752cbeeb6fbcd4fd2987c6851b429d4ac833cee08165790bbcc80880d55b6aae9e2fd06ad5ee9d WHIRLPOOL adcfd95b5c2ddd91c0e9bc590e4b7b786fa0dad1d78b6fdc7c2a969d9eb2572f69b50b7c3b9de18e147f52e5c12565f7bf47e383a494e3f7a2dccc3864241cff
 EBUILD setuptools-0.6.21.ebuild 1780 SHA256 306a43182e7ed56125f5e54948a26013838e5bf5199b236f1bd6eb7e9c516603 SHA512 210f852916299ab285bbdd10fed231e4ad2bd50bbbb444970536419357f436db1c90b1c0be31b81f92a67a1b0f13267375f742592981207ecd0ed0aaebd695d9 WHIRLPOOL 6e880724874f156be6f3b318e9514a1572087508ad1734bcee162d0ac26eb287a7f630b2303bad3dacd094a466fcc19a97a513b9ba0ec8d604da976910ba8b5e
 EBUILD setuptools-0.6.30-r1.ebuild 1553 SHA256 6710e694f0d8532ab6864919bbe700d5e01907db11f6758b458d087f839977cc SHA512 02a1afa2ccb1002a50f0312ec98acd29f4d7ef29a40ffd9b89d8328fc36281fcbfb1f52832a4704128450ed88c640c4791cd249d22445c85217f499d76d132c5 WHIRLPOOL 10fe028faee8c0611f1493f7cee574d12c8f7f00d042d0ee6df17e8bbd0a26c2d98bb978051dfe4689a377847923a6d5810ca912b74e19cd35e23603430bc7c0
 EBUILD setuptools-0.6.33.ebuild 1672 SHA256 6000a0ee3597657d605acafd8b216bd6ab8b573b2301a742d7e107fd50c6c38e SHA512 1237b82e5355566c431d7517a2021f6a2b9eab0345f4adc7497781dc0db958d0c71e59fafbe36adf62b652fd9461be74d80a0b53bc12da128ee1ce4e5a4db2c5 WHIRLPOOL ad3c98dcd658aa254d89517315e6e8ecdd466d43497567afbd7bf8004599bd90de6de7a4ace2115b8c58a8e75c979db226bf9a63d4b509c44ffc4876027f60df
@@ -41,13 +42,18 @@ EBUILD setuptools-5.1.ebuild 1443 SHA256 77c13713b2d91d7a78662887245a8b4d77b1b70
 EBUILD setuptools-5.2.ebuild 1443 SHA256 8696e90ca38a7d1bb4c0210c5f8485cba9d1f1e95dbb0d1d2666cfd997b022de SHA512 989a4ad710d3fba4ddc4996ff2a19d28dadcf23904b1f7837488f2b65990cbd19d1d0f18d07f07485bde92c8cc8c7a4aa20fc87af32beced30413f080708f456 WHIRLPOOL bceb1953ec8ff93d011a24bf7f66a7b53e509aaa68e632351deaaa7797607b357debaf3ea21df276a11bd1b9186fc5548987d60283be496bb73bc0b60f51af2a
 EBUILD setuptools-5.3.ebuild 1509 SHA256 bc9076efd462808e8360389b8b938316420fc126397eb9e9dcae5ceb8543635f SHA512 f40635bb5feb730302a684a10677f6eefdd1fe974ec77819db095fbf15b80f24bfd4d61b06f7bd2a84d3bde42b5c90d8a0a45f71f1db08301e7790e34d23b500 WHIRLPOOL 1090f8a358bfb60f56de9390eff2009cd6ddb90e9abd146a2c580ce5f4560240d445076d66803198f253392f885d3ab70dc9a8a28c1bcfed59089d4c3d970bde
 EBUILD setuptools-5.4.1.ebuild 1513 SHA256 35a666008824b08a93c3d4b60e7a6d9f1404b723b3889290dd456a561d67db56 SHA512 695aed0eeb331846c699f39069630d8d788ebc435710ff1c61dfe69643182418c03655748f4f9d8853a0c9df87d07f236b2bdb0a01a452a81ab47f5f3430dbf7 WHIRLPOOL 3672664bbcafc589149da24d3136ca689c1bb1bb9d5ce476dfa67420dc6a1a0299aa3c8ae7ef43c58d1fa1359e6298b0c80f6220a08488be3988cafb056d7a48
+EBUILD setuptools-5.6.ebuild 1511 SHA256 ad01f9ea86ac6732de11d8bdd2c0a78d16f9e7eaef537f8556d18d2574cade08 SHA512 bc07ec012b56264e276317ee65ea3f01ce50fcd5e893f94bbfdea0a3cf2f882d2dfa695fe88b3f136f8864d344de457f4f6a9c3c63630c2c98fe5d6e0e8c5da9 WHIRLPOOL 4f4bd3141dfdbc6b7f39c44e9ac4eebc42abb2fbdd3fa94e4633fe9dc27efe33717d24c1baf545060e603d30fea1ec61a381364213281f41e7febfb788115fca
 EBUILD setuptools-9999.ebuild 1649 SHA256 5c3a82add16dba19fd2921819f3f0a6c076378d4e198cca97c3661b62df27711 SHA512 55c4ce8ba2666cfb0ba5d3789bef4ea275211d91ef41515ba0f5de7ed8c6e6b231a9b0d9e38c8e8cc2937cd4147b4c48b8f3fc3bf8f55869e29a7be27826fe53 WHIRLPOOL 9741574be144a9fbeee1c404c21b3da58d9f5cecf075ff36bbf233b20daa2635470c4451edef11e94d1f202e62fcbdcc5e0219b14beb697b1753f41e4eaf356e
-MISC ChangeLog 34307 SHA256 57d458311602c229962458e17fa0cacad96313586d8793a8ea389f2644920dd8 SHA512 74b6ab88740735534899cf9bb947a766fe106f347f910e0bcfe37c4eb775b555eb8dd9e947df085ed854dfdf2f3c461a005ac533da47d96f56c3fdb6056594f0 WHIRLPOOL 9a6a0b641ed362cc21c67a7dde1e1abe1bf0a31378c938ede811f0029fae9d364f4af6179e12dfeb78cf8ccd94019ae5c5010eb52d17be5c34497786b8539b0d
+MISC ChangeLog 34430 SHA256 5ac305b2d6ea555bbabd4a16a54789f5ca22c6d41879aaad9f565433465168c9 SHA512 7984d1d69a8483a75316bef11219eb9e9c260b427d040856762236a13c99ee7f116ba2777a380a4469189028e806f30fda63a84f85c5413690e6377ca41585c3 WHIRLPOOL c8b7ceffd190c0e9d1ab2c0a5c945454006428fea247e5695109c6a3e46ec922c09791392f2f7321f5119987d8f998716a7fcf307f9a0013316e356195b9d43b
 MISC metadata.xml 233 SHA256 6dc0849682824e3bb8e7b092b59c0c49a7df79b6496086559a4b4bbf1a8bc586 SHA512 4c547bff28a5f545edec812745a83e42a044f7117a21bc5f417b91e48e61095194003760813b03c557004a3c9c669aa8ec50988eb4a3a106cfcb4e1063a0ef30 WHIRLPOOL a846059cf244c81e8d8ff01d667d0ced9a32d31bab77a25765a7c88eecefc3f7a4370939a9bcbb1822f3f35c182afe0e83693b241a2aa703597f15649baa00cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPbeqYACgkQuQc30/atMkADHQCfeu94OFuUfZVaxmDPWyUWugBL
-ZDYAniPRKB1HldrIBydsL74yMmHyYrcY
-=9W9D
+iQEcBAEBCAAGBQJT7Z9LAAoJEEqz6FtPBkyjSSYIALd0gufLSCUITD1hXcUxdwIL
+wPGqX/QJR1jxq78pZUHMmLdRkXBk5v1+9miP0LY6gO7VBzY3WuBZyghC/Sz/7XCf
+qL1kWqQbyJNkXaytTDsx9zG86ncfHkM3WIru8G7kUgdYYUZai29E+ooHhcnbJ8Kq
+W9v+mWBbQ4TffrPhIW4y71uJqc82YSUz9YA+2cjleEceWcAO0yxfA0QR4LlQPwU9
+ZLrfnzkr8iA08Y38CkU08nYdDY4MJcfvuPEntsf3Jk1duS8Ohen3vmeFB+ZjRvw5
+ERrlpBKLCAo4Vx1rZYgxzQ6YjyvbfOaATwpliiPWR+FOf263I3HOJNEFs7RYokA=
+=p/DC
 -----END PGP SIGNATURE-----
