@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.238 2014/08/01 11:31:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.239 2014/08/15 05:48:55 radhermit Exp $
+
+*setuptools-5.6 (15 Aug 2014)
+
+  15 Aug 2014; Tim Harder <radhermit@gentoo.org> +setuptools-5.6.ebuild:
+  Version bump.
 
   01 Aug 2014; Raúl Porcel <armin76@gentoo.org> setuptools-2.2.ebuild:
   sparc stable wrt #508416
